Further progress made with the construction of layout.

--- a/nestabletextview/src/main/AndroidManifest.xml
+++ b/nestabletextview/src/main/AndroidManifest.xml
@@ -1,2 +1,6 @@
+<!--
+  ~ Copyright (c) 2017. Geoff Vargo
+  -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.vargo.geoff.nestabletextview"/>
